# CC-Version-Guard

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  Cargo.toml  LEGAL_DISCLAIMER.md  README.md  error.txt  package-lock.json  package.json
docs/ADR/: 003-laws-of-ux.md
docs/Architecture/: Overview.md
docs/Features/: download-manager.md  legacy-downloads.md
docs/Reference/: community-knowledge.md  design-system.md
scripts/: generate_all_versions.py
src/: index.html  input.css  main.js  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: all_versions.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: autostart.rs  backup.rs  cleaner.rs  mod.rs  paths.rs  process.rs  protector.rs  scanner  scanner.rs  switcher.rs
