[package]
name = "capcut_guard_rust"
version = "2.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
sysinfo = "0.30"
walkdir = "2.4"
directories = "5.0"
open = "5.0"
semver = "1.0"
human-sort = "0.2"
egui-phosphor = { version = "0.7", features = ["fill", "regular"] }

# V2: Download & Security
reqwest = { version = "0.12", features = ["blocking", "stream"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
