[package]
name = "capcut_guard_tauri"
version = "2.2.0"
description = "Lock your CapCut version and prevent auto-updates"
authors = ["Zendevve"]
edition = "2021"

[lib]
name = "capcut_guard_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Migrated from original project
sysinfo = "0.30"
walkdir = "2.4"
